# personal-finance

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md
docs/: banks.md
src/personal_finance/: config.py  models.py  server.py
src/personal_finance/categories/: __init__.py  categorize.py  mappings.json  taxonomy.py
src/personal_finance/db/: __init__.py  connection.py  schema.py
src/personal_finance/ingest/: __init__.py  csv_parser.py  fingerprint.py  pipeline.py  profile.py
src/personal_finance/profiles/: amex_credit.json  chase_credit.json  discover_credit.json  wells_fargo_credit.json
src/personal_finance/tools/: categories.py  health.py  ingest.py  overview.py  spending.py  transactions.py
tests/: test_categories.py  test_ingest.py  test_overview.py  test_periods.py  test_profiles_more_banks.py  test_server.py  test_tools.py
tests/fixtures/: amex_credit_sample.csv  chase_credit_sample.csv  discover_credit_sample.csv  wells_fargo_credit_sample.csv
