[project]
name = "personal-finance"
version = "0.1.0"
description = "Self-hosted MCP server for personal financial analysis. Local-only data, no SaaS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Srini Velaga" }]
dependencies = [
    "fastmcp>=3.0",
    "duckdb>=1.1",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
plaid = ["plaid-python>=25.0"]

[project.scripts]
personal-finance = "personal_finance.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_finance"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
